--- a/styles/flex.css
+++ b/styles/flex.css
@@ -42,3 +42,65 @@
    border-radius: 5px;
    color: white;
 }
+/* main works */
+.service-container{
+    display: flex;
+    gap:150px;
+    justify-content: center;
+    align-items: center;
+    background: #FFF;
+    margin: 30px 300px 40px 200px;
+
+}
+.hhead{
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.ppragh{
+    color: #444343;
+    margin-top:25px;
+    margin-bottom: 25px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+.order{
+    color: #444343;
+    margin-top:25px;
+    margin-bottom: 25px;
+    text-decoration: nones;
+}
+.blog{
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-top: 80px;
+    margin-bottom: 50px;
+}
+.logos{
+    display: flex;
+    gap: 50px;
+    justify-content: space-around;
+    align-items: center;
+    /* margin-left: 100px; */
+    /* margin-right: 100px; */
+    /* width: 50% */
+    /* padding: 30px; */
+    /* margin-bottom: 50px; */
+}
+.watch{
+    width: 1140px;
+    height: 300px;
+    background-image: url("../images/watch.png"),linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0.00) 100%);
+    background-blend-mode: overlay;
+    background-position: center;
+    margin-bottom: 50px;
+    align-items: center;
+    margin-top:30px ;
+    border-radius: 8px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
