--- a/styles/flex.css
+++ b/styles/flex.css
@@ -103,4 +103,65 @@
     margin-left: 40px;
     margin-right: 40px;
 }
-
+.always{
+    color: #FFF;
+    font-size: 40px;
+    font-weight: 700;
+    padding: 30px;
+}
+.call{
+    border-radius: 5px;
+    background: #FFF;
+    padding: 20px 20px;
+    margin:30px;
+    border: 0;
+    color: #F15B22 ;
+    font-size: 20px;
+    margin-top: 10px;
+}
+/* footer works start */
+.foot{
+    display: flex;
+    gap: 50px;
+    background-color:#151414;
+    width: 100%;
+    height: 577px;
+    color: #FFF;
+    padding: 50px 50px;
+    
+}
+.fuuu{
+    font-size: 45px;
+    font-weight: 700;
+}
+.pgh{
+    font-size: 16px;
+    font-weight: 400;
+    width:50%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.ema{
+    font-size: 16px;
+    font-weight: 400;
+    /* margin-top: 20px;
+    margin-bottom: 40px; */
+}
+.log{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    gap: 20px;
+}
+.inp{
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 20px;
+    margin-bottom: 16px;
+    padding: 10px 90px 10px 5px;
+}
+.bton{ 
+    padding: 20px 30px;
+    border: 0;
+    border-radius: 5px;
+    color: #F15B22 ;
+}
