--- a/styles/flex.css
+++ b/styles/flex.css
@@ -84,11 +84,9 @@
     gap: 50px;
     justify-content: space-around;
     align-items: center;
-    /* margin-left: 100px; */
-    /* margin-right: 100px; */
-    /* width: 50% */
-    /* padding: 30px; */
-    /* margin-bottom: 50px; */
+    text-align: center;
+    width:80%;
+    margin: auto;
 }
 .watch{
     width: 1140px;
@@ -102,6 +100,8 @@
     border-radius: 8px;
     margin-left: 40px;
     margin-right: 40px;
+    margin: auto;
+
 }
 .always{
     color: #FFF;
